<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherForecast">

<ImageView
android:id="@+id/currentweather"
android:layout_width="200dp"
android:layout_height="200dp"
    />
<TextView
android:id="@+id/currentTemp"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/currentTempText"
    />
<TextView
android:id="@+id/minTemp"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/minTempText"
    />
<TextView
android:id="@+id/maxTemp"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/maxTempText"
    />
<TextView
android:id="@+id/UVRating"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/UVRatingText"
    />

<ProgressBar
android:id="@+id/bar"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:visibility="invisible"
style="?android:attr/progressBarStyleHorizontal"
    />
    </LinearLayout>